[package]
name = "useless-lang"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A compiler for the Useless Programming Language - where everything works exactly how you don't want it to"

[dependencies]
webbrowser = "0.8.12"
rand = "0.8.5"
thiserror = "1.0.50"
logos = "0.13.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
